# hardware_contest

./: README.md  test.py
Biomedical_project/: DRV2605.py  MPU6050.py  pio_uart.py  test.py  test_DRV2605L.py  test_LD2450.py  test_MPU6050.py
Biomedical_project/contest2/: CMakeLists.txt  MPU6050.cpp  contest2.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h
Biomedical_project/coontest/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  coontest.cpp  tusb_config.h  usb_descriptors.c
TTU_contest/: DRV_2605L.py  LD2450_test1.py  MPU6050.py  Main_MPU6050.py  adafruit_drv2605.py  drv2605l.py  ld2450.py  main.py  mpu6050.py  test1.py
games/: game_tetris.py  main.py
internet_game/: ssd1306.py  tetris.py
school_project/: DisplayUnit.py  InputUnit.py  game2.py  game3_pingpong.py  game_ab.py  game_shooter.py  maze.py  menu.json  menu_loader.py  menu_system.py  ssd1306.py
